--- a/MagentoSelenuimAutomationDemo/MagentoSelenuimAutomationDemo.csproj
+++ b/MagentoSelenuimAutomationDemo/MagentoSelenuimAutomationDemo.csproj
@@ -29,4 +29,8 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include=".github\workflows\dotnet.yml" />
+  </ItemGroup>
+
 </Project>
